--- a/options.html
+++ b/options.html
@@ -1,35 +1,8 @@
 <html>
 <head><title>Columbia Auto UNI Options</title></head>
-<script type="text/javascript">
+<script src="options.js"></script>
 
-// Saves options to localStorage.
-function save_options() {
-  localStorage["uni"] = document.getElementById("uni").value;
-  localStorage["pw"]  = document.getElementById("pw").value;
-  
-  // Update status to let user know options were saved.
-  var status = document.getElementById("status");
-  status.innerHTML = "Options Saved.";
-  setTimeout(function() {
-    status.innerHTML = "";
-  }, 1000);
-}
-
-// Restores saved options from localStorage.
-function restore_options() {
-  var data_uni = localStorage["uni"];
-  if (null != data_uni)
-    document.getElementById("uni").value = data_uni;
-  var data_pw = localStorage["pw"];
-  if (null != data_pw)
-    document.getElementById("pw").value = data_pw;
-
-  document.getElementById("uni").focus();
-}
-
-</script>
-
-<body onLoad="restore_options()">
+<body>
 
 <style>
 body {
@@ -47,10 +20,10 @@ with a password.  <b>NB: the password you provide below will be saved in<br />
 plain text to the browser's "local storage".</b>  To delete this saved data,<br />
 resave an empty password or simply delete this extension.
 <br /><br />
-<form action="javascript:save_options();">
+<form>
   <b>UNI:</b> <input id="uni" type="text" /><br />
   <b>PW:</b> <input id="pw" type="password" /><br />
-  <input type="submit" value="Save" /><br /><br />
+  <button>Save</button><br /><br />
 </form>
 <div id="status" style="color: #090; font-weight:bold;"></div>
 </body>
